--- a/ssc-mts.html
+++ b/ssc-mts.html
@@ -11,11 +11,11 @@
       line-height: 1.6;
       background-color: #fdf6e3; /* paper-like background */
       color: #333;
+      padding: 1rem;
     }
     .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 1rem;
+      max-width: 850px;
+      margin: auto;
     }
     h1, h2, h3 {
       color: #2c3e50;
@@ -26,11 +26,29 @@
       color: #007bff;
       text-decoration: none;
     }
-    .summary-box {
-      background: #f1f1f1;
+    .info-box {
+      background: #e8f5e9;
+      border-left: 5px solid #4CAF50;
       padding: 1rem;
-      border-left: 4px solid #007bff;
-      margin-bottom: 1.5rem;
+      margin: 1rem 0;
+    }
+    .warning-box {
+      background: #fff3cd;
+      border-left: 5px solid #ff9800;
+      padding: 1rem;
+      margin: 1rem 0;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin: 1rem 0;
+    }
+    table, th, td {
+      border: 1px solid #bbb;
+    }
+    th, td {
+      padding: 8px;
+      text-align: left;
     }
     ul {
       padding-left: 1.2rem;
@@ -42,145 +60,152 @@
     a:hover {
       text-decoration: underline;
     }
-    section {
-      margin-bottom: 2rem;
+    .cta-button {
+      display: inline-block;
+      background: #4CAF50;
+      color: white;
+      padding: 0.6rem 1rem;
+      margin: 0.5rem 0;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .cta-button:hover {
+      background: #45a049;
     }
   </style>
 </head>
 <body>
   <div class="container">
+
     <a href="class10.html" class="back-link">← Back to Class 10 Jobs</a>
 
-    <!-- Google Translate dropdown -->
+    <!-- Google Translate -->
     <div id="google_translate_element" style="text-align: right; margin-bottom: 20px;"></div>
+    <p style="font-size: 0.9rem; color: #555;">📢 Change the language above to read in Assamese or Hindi</p>
 
-    <h1>1. 🧾 SSC MTS Exam (Including Havaldar)</h1>
+    <h1>1. 🧾 SSC MTS & Havaldar Exam</h1>
 
-    <section>
-      <h2>🔍 About the Exam</h2>
-      <p><strong>MTS:</strong> Office helper jobs like peon, office assistant, etc.</p>
-      <p><strong>Havaldar:</strong> Security roles in CBIC and CBN departments.</p>
-    </section>
+    <div class="info-box">
+      <strong>Why this job is good for you:</strong>  
+      ✔ Stable government salary + pension after retirement  
+      ✔ Can be posted anywhere in India (opportunity to travel)  
+      ✔ Only Class 10 qualification needed  
+      ✔ Social respect & job security
+    </div>
 
-    <section>
-      <h2>🎓 Who Can Apply?</h2>
-      <ul>
-        <li>Education: Class 10 pass</li>
-        <li>Age:
-          <ul>
-            <li>MTS: 18–25 years</li>
-            <li>Havaldar: 18–27 years</li>
-          </ul>
-        </li>
-      </ul>
-    </section>
+    <h2>🔍 About the Exam</h2>
+    <p><strong>MTS:</strong> Office helper jobs like peon, office assistant, file management, messenger duties.</p>
+    <p><strong>Havaldar:</strong> Security roles in CBIC and CBN departments, assisting senior officials.</p>
 
-    <section>
-      <h2>💼 Job Roles</h2>
-      <ul>
-        <li><strong>MTS:</strong> Office work like file management, assisting staff</li>
-        <li><strong>Havaldar:</strong> Security duties, assisting senior officials</li>
-      </ul>
-    </section>
+    <h2>🎓 Who Can Apply?</h2>
+    <ul>
+      <li>Education: Class 10 pass</li>
+      <li>Age Limit:
+        <ul>
+          <li>MTS: 18–25 years</li>
+          <li>Havaldar: 18–27 years</li>
+        </ul>
+      </li>
+      <li>Age Relaxation: As per government rules for SC/ST/OBC/PwD</li>
+    </ul>
 
-    <section>
-      <h2>📝 Exam Pattern</h2>
-      <ul>
-        <li><strong>Stage 1:</strong> Computer-Based Test (CBT)
-          <ul>
-            <li>Duration: 90 minutes</li>
-            <li>Sections:
-              <ul>
-                <li>Reasoning</li>
-                <li>Numerical Aptitude</li>
-                <li>English Language</li>
-                <li>General Awareness</li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-        <li><strong>Stage 2:</strong> Physical Tests (for Havaldar only)
-          <ul>
-            <li><strong>Physical Efficiency Test (PET):</strong>
-              <ul>
-                <li>Male: 1600 meters in 15 minutes</li>
-                <li>Female: 1 km in 20 minutes</li>
-              </ul>
-            </li>
-            <li><strong>Physical Standard Test (PST):</strong>
-              <ul>
-                <li>Male: Height: 157.5 cm; Chest: 81–86 cm</li>
-                <li>Female: Height: 152 cm</li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </section>
+    <h2>💼 Job Roles</h2>
+    <ul>
+      <li><strong>MTS:</strong> Office work, assisting staff, delivering documents</li>
+      <li><strong>Havaldar:</strong> Security duties, supporting administrative staff</li>
+    </ul>
 
-    <section>
-      <h2>📅 Important Dates</h2>
-      <ul>
-        <li>Notification Release: June 26, 2025</li>
-        <li>Application Period: June 26 – July 24, 2025</li>
-        <li>Exam Date: September/October 2025</li>
-      </ul>
-    </section>
+    <h2>📝 Exam Pattern</h2>
+    <ul>
+      <li><strong>Stage 1:</strong> Computer-Based Test (CBT)
+        <ul>
+          <li>Duration: 90 minutes</li>
+          <li>Sections:
+            <ul>
+              <li>Reasoning</li>
+              <li>Numerical Aptitude</li>
+              <li>English Language</li>
+              <li>General Awareness</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li><strong>Stage 2:</strong> Physical Tests (for Havaldar only)
+        <ul>
+          <li><strong>PET:</strong>  
+            Male: 1600m in 15 min | Female: 1 km in 20 min
+          </li>
+          <li><strong>PST:</strong>  
+            Male: Height 157.5 cm, Chest 81–86 cm  
+            Female: Height 152 cm
+          </li>
+        </ul>
+      </li>
+    </ul>
 
-    <section>
-      <h2>💡 Tips to Crack the Exam</h2>
-      <ul>
-        <li>Practice previous year papers</li>
-        <li>Take mock tests regularly</li>
-        <li>Stay updated with current affairs</li>
-        <li>Revise basic concepts in mathematics and reasoning</li>
-      </ul>
-    </section>
-<section>
-  <h2>🔗 Free Study Resources</h2>
-  <ul>
-    <li>PDF: <a href="https://ssc.gov.in/api/attachment/uploads/masterData/NoticeBoards/Notice_of_adv_mts_2025.pdf" target="_blank">SSC MTS Notification & Syllabus 2025</a></li>
-    <li>Previous Year Papers (PDF): <a href="https://www.adda247.com/jobs/ssc-mts-previous-year-question-paper/?srsltid=AfmBOopseocwHpzcP-3uMsAEgtxRYAB5NWxFBdpDYeWwJEaNBklRqz8l" target="_blank">Download SSC MTS PYQs (Adda247)</a></li>
-  </ul>
+    <h2>📅 Important Dates</h2>
+    <table>
+      <tr><th>Event</th><th>Date</th></tr>
+      <tr><td>Notification Release</td><td>26 June 2025</td></tr>
+      <tr><td>Application Period</td><td>26 June – 24 July 2025</td></tr>
+      <tr><td>Exam Date</td><td>Sept/Oct 2025</td></tr>
+    </table>
 
-  <h3>YouTube Study Links:</h3>
-  <ul>
-    <li>🧠 Reasoning: <a href="https://www.youtube.com/watch?v=QyJDGPdSUU4" target="_blank">Important Reasoning Questions</a></li>
-    <li>📚 General Awareness: <a href="https://www.youtube.com/watch?v=5gpYfv-vQUw" target="_blank">GK/GS Classes 2025</a></li>
-    <li>🧮 Maths: <a href="https://www.youtube.com/playlist?list=PLxtzKdPI7iWOz8A59uDwJB6mzxPggHduJ" target="_blank">Maths Preparation Playlist</a></li>
-    <li>📝 English: <a href="https://www.youtube.com/playlist?list=PLY5Fr2gk1HQCYnoxFjtjgJLN-Rg0w6FOQ" target="_blank">English Chapter-Wise Playlist</a></li>
-  </ul>
+    <h2>💡 Tips to Crack the Exam</h2>
+    <ul>
+      <li>Practice previous year papers regularly</li>
+      <li>Take online mock tests every week</li>
+      <li>Revise basic maths & reasoning daily</li>
+      <li>Read current affairs from reliable sources</li>
+    </ul>
 
-  <br>
+    <div class="warning-box">
+      <strong>Common mistakes to avoid:</strong>  
+      ❌ Waiting till last day to apply  
+      ❌ Uploading wrong photo/signature  
+      ❌ Skipping physical preparation (for Havaldar)
+    </div>
 
-  <ul>
-    <li>🌐 Official Website: <a href="https://ssc.nic.in" target="_blank">ssc.nic.in</a></li>
-  </ul>
-</section>
+    <h2>🔗 Free Study Resources</h2>
+    <ul>
+      <li>📄 PDF: <a href="https://ssc.gov.in/api/attachment/uploads/masterData/NoticeBoards/Notice_of_adv_mts_2025.pdf" target="_blank">SSC MTS Notification & Syllabus 2025</a></li>
+      <li>📄 Previous Year Papers: <a href="https://www.adda247.com/jobs/ssc-mts-previous-year-question-paper/?srsltid=AfmBOopseocwHpzcP-3uMsAEgtxRYAB5NWxFBdpDYeWwJEaNBklRqz8l" target="_blank">Download SSC MTS PYQs</a></li>
+    </ul>
 
+    <h3>📺 YouTube Study Links:</h3>
+    <ul>
+      <li>🧠 Reasoning: <a href="https://www.youtube.com/watch?v=QyJDGPdSUU4" target="_blank">Important Reasoning Questions</a></li>
+      <li>📚 General Awareness: <a href="https://www.youtube.com/watch?v=5gpYfv-vQUw" target="_blank">GK/GS Classes 2025</a></li>
+      <li>🧮 Maths: <a href="https://www.youtube.com/playlist?list=PLxtzKdPI7iWOz8A59uDwJB6mzxPggHduJ" target="_blank">Maths Preparation Playlist</a></li>
+      <li>📝 English: <a href="https://www.youtube.com/playlist?list=PLY5Fr2gk1HQCYnoxFjtjgJLN-Rg0w6FOQ" target="_blank">English Chapter-Wise Playlist</a></li>
+    </ul>
 
+    <br>
+    <ul>
+      <li>🌐 Official Website: <a href="https://ssc.nic.in" target="_blank">ssc.nic.in</a></li>
+    </ul>
 
+    <h2>🌐 How to Apply</h2>
+    <ol>
+      <li>Visit <a href="https://ssc.nic.in" target="_blank">ssc.nic.in</a></li>
+      <li>Register with basic details, upload photo & signature</li>
+      <li>Pay fee (₹100 for General, free for SC/ST/Female)</li>
+      <li>Submit form & save PDF for reference</li>
+    </ol>
 
-    </section>
+    <p style="font-size: 0.9rem; color: #555;"><strong>💡 Tip for Rural Applicants:</strong> You can visit a nearby CSC Centre or internet café for help with form filling and document scanning.</p>
 
-    <section>
-      <h2>🌐 How to Apply</h2>
-      <ul>
-        <li>Visit: <a href="https://ssc.nic.in" target="_blank">ssc.nic.in</a></li>
-        <li>Register with basic details and upload documents</li>
-        <li>Pay exam fee (₹100 for General, free for SC/ST/Female)</li>
-      </ul>
-    </section>
+    <a href="https://ssc.nic.in" target="_blank" class="cta-button">Apply Online</a>
 
-    <p><strong>Note:</strong> This is a general template. All official links and dates will be updated after notification release.</p>
   </div>
 
-  <!-- Google Translate scripts -->
+  <!-- Google Translate -->
   <script type="text/javascript">
     function googleTranslateElementInit() {
       new google.translate.TranslateElement({
         pageLanguage: 'en',
-        includedLanguages: 'en,as,hi,bn',
+        includedLanguages: 'as,hi',
         layout: google.translate.TranslateElement.InlineLayout.SIMPLE
       }, 'google_translate_element');
     }
@@ -188,5 +213,6 @@
   <script type="text/javascript"
     src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
   </script>
+
 </body>
 </html>
