--- a/ssc-gd.html
+++ b/ssc-gd.html
@@ -3,96 +3,166 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SSC GD Constable – Naukri Saathi</title>
+  <title>SSC GD Constable - Naukri Saathi</title>
   <link rel="stylesheet" href="style.css" />
   <style>
-    body { font-family: sans-serif; background: #fdf6e3; padding: 1rem; color: #333; }
-    .container { max-width: 800px; margin: auto; }
-    h1, h2, h3 { color: #2c3e50; }
-    .back-link { margin: 1rem 0; display: inline-block; color: #007bff; text-decoration: none; }
-    .info-box { background: #e8f5e9; border-left: 5px solid #4CAF50; padding: 1rem; margin: 1rem 0; }
-    .warning-box { background: #fff3cd; border-left: 5px solid #ff9800; padding: 1rem; margin: 1rem 0; }
-    ul { margin-left: 1.2rem; }
-    table { width: 100%; border-collapse: collapse; margin: 1rem 0; }
-    th, td { border: 1px solid #bbb; padding: 8px; text-align: left; }
-    .cta-button { background: #4CAF50; color: white; padding: 0.6rem 1rem; border-radius: 5px; text-decoration: none; font-weight: bold; }
+    body {
+      font-family: sans-serif;
+      line-height: 1.6;
+      background-color: #fdf6e3;
+      color: #333;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 1rem;
+    }
+    h1, h2, h3 {
+      color: #2c3e50;
+    }
+    .back-link {
+      display: inline-block;
+      margin: 1rem 0;
+      color: #007bff;
+      text-decoration: none;
+    }
+    .summary-box {
+      background: #f1f1f1;
+      padding: 1rem;
+      border-left: 4px solid #007bff;
+      margin-bottom: 1.5rem;
+    }
+    ul {
+      padding-left: 1.2rem;
+    }
+    a {
+      color: #007bff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    section {
+      margin-bottom: 2rem;
+    }
   </style>
 </head>
 <body>
   <div class="container">
     <a href="class10.html" class="back-link">← Back to Class 10 Jobs</a>
-    <div id="google_translate_element" style="text-align: right;"></div>
-    <p style="font-size:0.9rem; color:#555;">📢 Change the language above to read in Assamese or Hindi</p>
 
-    <h1>SSC GD Constable Exam</h1>
-    <div class="info-box">
-      Why this job is under your reach:  
-      • Pays well and offers long-term stability • Opportunity to serve in forces like BSF, CRPF, CISF, ITBP, SSB • Class 10 education is enough to apply
-    </div>
+    <!-- Google Translate -->
+    <div id="google_translate_element" style="text-align: right; margin-bottom: 20px;"></div>
 
-    <h2>About the Exam</h2>
-    <p>The SSC GD Constable exam is conducted each year by the Staff Selection Commission to recruit General Duty Constables in CAPFs (like BSF, CRPF, SSB, CISF, ITBP), Assam Rifles, and SSF.</p>
+    <h1>2. 👮 SSC GD Constable</h1>
 
-    <h2>Who Can Apply?</h2>
-    <ul>
-      <li>Education: Class 10 pass</li>
-      <li>Age: 18–23 years (relaxation for SC/ST/OBC/Sports as per norms) :contentReference[oaicite:0]{index=0}</li>
-      <li>Nationality: Indian</li>
-    </ul>
+    <section>
+      <h2>🔍 About the Exam</h2>
+      <p>The <strong>SSC GD Constable</strong> exam recruits youth for various paramilitary forces like <strong>BSF, CRPF, CISF, ITBP, SSB, Assam Rifles, SSF</strong> and NIA. It’s one of the most popular central government jobs after Class 10.</p>
+    </section>
 
-    <h2>Job Roles</h2>
-    <ul>
-      <li>GD Constable: Security roles, patrolling, administrative duties in CAPFs and Assam Rifles</li>
-    </ul>
+    <section>
+      <h2>🎓 Who Can Apply?</h2>
+      <ul>
+        <li>Education: Class 10 pass from a recognised board</li>
+        <li>Age: 18–23 years (relaxations for SC/ST/OBC)</li>
+        <li>Indian citizen</li>
+      </ul>
+    </section>
 
-    <h2>Exam Pattern</h2>
-    <ul>
-      <li><strong>Stage 1 – CBT:</strong> 80 MCQs for 160 marks in 60 mins (Reasoning, GK, Maths, English/Hindi). Negative marking: 0.25 per wrong answer. :contentReference[oaicite:1]{index=1}</li>
-      <li><strong>Stage 2 – Physical Tests (PET & PST):</strong>  
-        • PET: Men—5 km in 24 min; Women—1.6 km in 8.5 min (Ladakh region has special timings) :contentReference[oaicite:2]{index=2}  
-        • PST (Physical Standard): Height & chest criteria vary by category (e.g., 170 cm for General male; 162.5 cm for ST NE region) :contentReference[oaicite:3]{index=3}
-      </li>
-    </ul>
+    <section>
+      <h2>💼 Job Roles</h2>
+      <ul>
+        <li>Guarding borders and sensitive installations</li>
+        <li>Law and order duties</li>
+        <li>Assisting during natural disasters and emergencies</li>
+      </ul>
+    </section>
 
-    <h2>Important Dates</h2>
-    <table>
-      <tr><th>Event</th><th>Date</th></tr>
-      <tr><td>Notification Release</td><td>Notified on SSC website</td></tr>
-      <tr><td>Exam Date (Tentative)</td><td>Feb–Mar 2025</td></tr>
-      <tr><td>Results & PET Schedule</td><td>June 2025 onwards (connect with official site) :contentReference[oaicite:4]{index=4}</td></tr>
-    </table>
+    <section>
+      <h2>📝 Exam Pattern</h2>
+      <ul>
+        <li><strong>Stage 1:</strong> Computer-Based Test (CBT)
+          <ul>
+            <li>Duration: 60 minutes</li>
+            <li>100 questions (1 mark each), no negative marking</li>
+            <li>Sections:
+              <ul>
+                <li>General Intelligence & Reasoning (25 Q)</li>
+                <li>General Knowledge & Awareness (25 Q)</li>
+                <li>Elementary Mathematics (25 Q)</li>
+                <li>English/Hindi Language (25 Q)</li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li><strong>Stage 2:</strong> Physical Efficiency Test (PET)
+          <ul>
+            <li>Male: 5 km in 24 minutes</li>
+            <li>Female: 1.6 km in 8.5 minutes</li>
+          </ul>
+        </li>
+        <li><strong>Stage 3:</strong> Physical Standard Test (PST)
+          <ul>
+            <li>Height: Male – 170 cm, Female – 157 cm</li>
+            <li>Chest (Male): 80 cm (unexpanded), 5 cm expansion</li>
+          </ul>
+        </li>
+        <li><strong>Stage 4:</strong> Medical Examination</li>
+      </ul>
+    </section>
 
-    <h2>Tips to Prepare</h2>
-    <ul>
-      <li>Practice past years’ papers daily</li>
-      <li>Take full mock tests to manage time & reduce slips</li>
-      <li>Focus on maths formulae, reasoning shortcuts & current affairs</li>
-    </ul>
-    <div class="warning-box">
-      Watch out for mistakes: application deadlines, uploading wrong documents, and ignoring physical training for PET.
-    </div>
+    <section>
+      <h2>📅 Important Dates (2025 Expected)</h2>
+      <ul>
+        <li>Notification Release: Dec 2025</li>
+        <li>Application Period: Dec 2025 – Jan 2026</li>
+        <li>Exam Date: Feb–Mar 2026</li>
+      </ul>
+    </section>
 
-    <h2>Free Study Resources</h2>
-    <ul>
-      <li>PDF: <a href="https://ssc.gov.in/api/attachment/uploads/masterData/NoticeBoards/Notice_of_adv_mts_2025.pdf" target="_blank">SSC GD Notification & Syllabus</a> *(Update link when released)*</li>
-      <li>PYQs: Search “SSC GD previous year paper PDF” online</li>
-    </ul>
-    <h3>YouTube Videos</h3>
-    <ul>
-      <li>Example: "SSC GD full syllabus explanation video" on YouTube</li>
-    </ul>
-    <ul><li>Official Site: <a href="https://ssc.nic.in" target="_blank">ssc.nic.in</a></li></ul>
+    <section>
+      <h2>💡 Tips to Crack the Exam</h2>
+      <ul>
+        <li>Practice previous year papers for speed and accuracy</li>
+        <li>Work on physical fitness daily for PET</li>
+        <li>Revise basic maths and GK regularly</li>
+        <li>Attempt online mock tests in exam-like conditions</li>
+      </ul>
+    </section>
 
-    <h2>How to Apply</h2>
-    <ul>
-      <li>Go to ssc.nic.in → Registration</li>
-      <li>Fill personal details, upload photo & signature</li>
-      <li>Pay fee (₹100 for General/OBC, exempted for SC/ST/Female)</li>
-      <li>Submit & save PDF confirmation</li>
-    </ul>
-    <p style="font-size:0.9rem; color:#555;">Tip: Visit your nearest CSC (Common Service Centre) or cyber café for help if internet access is limited.</p>
+    <section>
+      <h2>🔗 Free Study Resources</h2>
+      <ul>
+        <li>📄 PDF: <a href="https://ssc.nic.in/SSCFileServer/PortalManagement/UploadedFiles/notice_GDConstable_01122023.pdf" target="_blank">SSC GD Constable Notification 2023 (Latest)</a></li>
+        <li>📄 Previous Year Papers (PDF): <a href="https://www.adda247.com/defence-jobs/ssc-gd-previous-year-papers/" target="_blank">Download SSC GD PYQs</a></li>
+      </ul>
 
-    <a href="https://ssc.nic.in" class="cta-button" target="_blank">Apply Online</a>
+      <h3>📺 YouTube Study Links</h3>
+      <ul>
+        <li>🧠 Reasoning: <a href="https://www.youtube.com/playlist?list=PL5gV37jQSHpD7P9Y8N0m7bEwAl0Rxu-nn" target="_blank">Reasoning Practice Playlist</a></li>
+        <li>📚 General Awareness: <a href="https://www.youtube.com/watch?v=Rkqz1s3uWnE" target="_blank">GK/GS for SSC GD</a></li>
+        <li>🧮 Maths: <a href="https://www.youtube.com/playlist?list=PLxtzKdPI7iWPDX0bPjZrL1nDdzx6ErhW_" target="_blank">Maths for SSC GD</a></li>
+        <li>📝 English/Hindi: <a href="https://www.youtube.com/playlist?list=PLM8s7vgHZsGSdCwGZj9vAh3V1B8dBtI_T" target="_blank">Language Preparation</a></li>
+      </ul>
+
+      <br>
+      <ul>
+        <li>🌐 Official Website: <a href="https://ssc.nic.in" target="_blank">ssc.nic.in</a></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>🌐 How to Apply</h2>
+      <ul>
+        <li>Visit: <a href="https://ssc.nic.in" target="_blank">ssc.nic.in</a></li>
+        <li>Register using your mobile number and email ID</li>
+        <li>Fill application form and upload photo/signature</li>
+        <li>Pay fee (₹100 for General/OBC, Free for SC/ST/Female)</li>
+      </ul>
+    </section>
+
+    <p><strong>Note:</strong> Official dates for 2025 will be updated when the notification is released.</p>
   </div>
 
   <!-- Google Translate -->
@@ -100,11 +170,11 @@
     function googleTranslateElementInit() {
       new google.translate.TranslateElement({
         pageLanguage: 'en',
-        includedLanguages: 'as,hi',
+        includedLanguages: 'en,as,hi,bn',
         layout: google.translate.TranslateElement.InlineLayout.SIMPLE
       }, 'google_translate_element');
     }
   </script>
-  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
