--- a/exam-template.html
+++ b/exam-template.html
@@ -195,7 +195,7 @@
   // ---------- main: try Google Sheet (CSV) then fallback to localData ----------
   (function(){
     const id = getParam('id') || 'ssc-mts';
-    if(!SHEET_CSV_URL) {
+    if(!https://docs.google.com/spreadsheets/d/e/2PACX-1vRVh2Dak5NekD_LAZjqbR4QRqkBmqrY0Jxm3E8Svle-6yhjebjbSWJGVZ1AAKIKuJVKL09XnoZxUlFj/pubhtml) {
       // no sheet set — use localData
       const found = localData.find(e => e.id === id);
       renderExam(found || localData[0]);
@@ -203,7 +203,7 @@
     }
 
     // fetch CSV
-    fetch(SHEET_CSV_URL)
+    fetch(https://docs.google.com/spreadsheets/d/e/2PACX-1vRVh2Dak5NekD_LAZjqbR4QRqkBmqrY0Jxm3E8Svle-6yhjebjbSWJGVZ1AAKIKuJVKL09XnoZxUlFj/pubhtml)
       .then(r => r.ok ? r.text() : Promise.reject('CSV fetch failed'))
       .then(txt => {
         // parse CSV into array of objects
