--- a/class10.html
+++ b/class10.html
@@ -77,24 +77,24 @@
 
       <h3>🏛️ Central Level Exams (All India)</h3>
       <ul class="job-summary" id="examList">
-        <li><strong><a href="ssc-mts.html">1. SSC MTS & Havaldar</a></strong><br>➡️ Office helper jobs & Havaldar posts in central govt departments.<br>✅ Class 10 pass<br>🌍 All India<br>💰 ₹23,000–₹25,000/month</li>
-        <li><strong><a href="ssc-gd.html">2. SSC GD Constable</a></strong><br>➡️ Join BSF, CRPF, CISF, ITBP, SSB, or SSF.<br>✅ Class 10 pass<br>💪 Physical test needed<br>💰 ₹30,000–₹32,000/month</li>
-        <li><strong><a href="rrb-group-d.html">3. RRB Group D</a></strong><br>➡️ Railway jobs like helper, track maintainer, porter.<br>✅ Class 10 pass<br>🚆 Railway lovers<br>💰 ₹22,000–₹25,000/month</li>
-        <li><strong><a href="gds.html">4. Indian Post GDS</a></strong><br>➡️ Post office jobs in villages/towns.<br>✅ Class 10 pass with good marks in Maths & English<br>📬 No exam<br>💰 ₹10,000–₹14,500/month</li>
-        <li><strong><a href="army-agniveer.html">5. Army Agniveer</a></strong><br>➡️ Soldier GD & Tradesman roles.<br>✅ Class 10 pass<br>📋 Physical + written test<br>💰 ₹30,000–₹40,000/month</li>
-        <li><strong><a href="navy-agniveer.html">6. Navy Agniveer (MR)</a></strong><br>➡️ Matric Recruit posts like cook, steward.<br>✅ Class 10 pass<br>🚢 Physical + written test<br>💰 ₹30,000–₹40,000/month</li>
-        <li><strong><a href="airforce-agniveer.html">7. Air Force Agniveer Vayu</a></strong><br>➡️ Trades/support roles.<br>✅ Class 10 pass<br>✈️ Physical + written test<br>💰 ₹30,000–₹40,000/month</li>
+        <li><strong><a href="exam-template.html?id=ssc-mts">1. SSC MTS & Havaldar</a></strong><br>➡️ Office helper jobs & Havaldar posts in central govt departments.<br>✅ Class 10 pass<br>🌍 All India<br>💰 ₹23,000–₹25,000/month</li>
+        <li><strong><a href="exam-template.html?id=ssc-gd">2. SSC GD Constable</a></strong><br>➡️ Join BSF, CRPF, CISF, ITBP, SSB, or SSF.<br>✅ Class 10 pass<br>💪 Physical test needed<br>💰 ₹30,000–₹32,000/month</li>
+        <li><strong><a href="exam-template.html?id=rrb-group-d">3. RRB Group D</a></strong><br>➡️ Railway jobs like helper, track maintainer, porter.<br>✅ Class 10 pass<br>🚆 Railway lovers<br>💰 ₹22,000–₹25,000/month</li>
+        <li><strong><a href="exam-template.html?id=gds">4. Indian Post GDS</a></strong><br>➡️ Post office jobs in villages/towns.<br>✅ Class 10 pass with good marks in Maths & English<br>📬 No exam<br>💰 ₹10,000–₹14,500/month</li>
+        <li><strong><a href="exam-template.html?id=army-agniveer">5. Army Agniveer</a></strong><br>➡️ Soldier GD & Tradesman roles.<br>✅ Class 10 pass<br>📋 Physical + written test<br>💰 ₹30,000–₹40,000/month</li>
+        <li><strong><a href="exam-template.html?id=navy-agniveer">6. Navy Agniveer (MR)</a></strong><br>➡️ Matric Recruit posts like cook, steward.<br>✅ Class 10 pass<br>🚢 Physical + written test<br>💰 ₹30,000–₹40,000/month</li>
+        <li><strong><a href="exam-template.html?id=airforce-agniveer">7. Air Force Agniveer Vayu</a></strong><br>➡️ Trades/support roles.<br>✅ Class 10 pass<br>✈️ Physical + written test<br>💰 ₹30,000–₹40,000/month</li>
       </ul>
 
       <br>
 
       <h3>🌾 Assam State Level Exams</h3>
       <ul class="job-summary">
-        <li><strong><a href="assam-dr.html">8. Assam Direct Recruitment – Grade IV</a></strong><br>➡️ Peon, Chowkidar, Driver, etc.<br>✅ Class 8/10 pass<br>🏢 No special skill<br>💰 ₹17,000–₹20,000/month</li>
-        <li><strong><a href="assam-police.html">9. Assam Police Grade IV</a></strong><br>➡️ Peon, Chowkidar, Driver.<br>✅ Class 10 pass<br>🚓 Physical + written test<br>💰 ₹18,000–₹21,000/month</li>
-        <li><strong><a href="assam-forest.html">10. Assam Forest Guard / AFPF Constable</a></strong><br>➡️ Protect forests/wildlife.<br>✅ Class 10 pass<br>🌲 Physical + written test<br>💰 ₹22,000–₹25,000/month</li>
-        <li><strong><a href="excise-constable.html">11. Excise Constable</a></strong><br>➡️ Excise Dept jobs.<br>✅ Class 10 pass<br>🔍 Written + Physical test<br>💰 ₹22,000–₹25,000/month</li>
-        <li><strong><a href="home-guard.html">12. Home Guard Volunteer</a></strong><br>➡️ Assist police.<br>✅ Class 10 pass<br>🎽 Physical fitness test<br>💰 ₹9,000–₹11,000/month</li>
+        <li><strong><a href="exam-template.html?id=assam-dr">8. Assam Direct Recruitment – Grade IV</a></strong><br>➡️ Peon, Chowkidar, Driver, etc.<br>✅ Class 8/10 pass<br>🏢 No special skill<br>💰 ₹17,000–₹20,000/month</li>
+        <li><strong><a href="exam-template.html?id=assam-police">9. Assam Police Grade IV</a></strong><br>➡️ Peon, Chowkidar, Driver.<br>✅ Class 10 pass<br>🚓 Physical + written test<br>💰 ₹18,000–₹21,000/month</li>
+        <li><strong><a href="exam-template.html?id=assam-forest">10. Assam Forest Guard / AFPF Constable</a></strong><br>➡️ Protect forests/wildlife.<br>✅ Class 10 pass<br>🌲 Physical + written test<br>💰 ₹22,000–₹25,000/month</li>
+        <li><strong><a href="exam-template.html?id=excise-constable">11. Excise Constable</a></strong><br>➡️ Excise Dept jobs.<br>✅ Class 10 pass<br>🔍 Written + Physical test<br>💰 ₹22,000–₹25,000/month</li>
+        <li><strong><a href="exam-template.html?id=home-guard">12. Home Guard Volunteer</a></strong><br>➡️ Assist police.<br>✅ Class 10 pass<br>🎽 Physical fitness test<br>💰 ₹9,000–₹11,000/month</li>
       </ul>
 
       <br>
